--- a/deployment/app.yaml
+++ b/deployment/app.yaml
@@ -43,6 +43,7 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: my-app-hpa
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
