--- a/deployment/app.yaml
+++ b/deployment/app.yaml
@@ -39,7 +39,7 @@ spec:
   type: LoadBalancer
 
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: my-app-hpa
